# nesstar-converter

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  nesstar_converter.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: TECHNICAL.md  global-coverage.md
examples/: basic_usage.py
tests/: conftest.py  test_nesstar_converter.py
